--- a/index.html
+++ b/index.html
@@ -10,56 +10,44 @@
 </head>
 
 <body>
+    <header>
+        <a href="index.html">
+            <img src="img/logo.png" alt="Logo da Empresa"> <!-- Substitua 'logo.png' pela sua logo -->
+            <span>DR. SILVA ENGENHARIA</span> <!-- Nome da empresa adicionado -->
+        </a>
+        <nav>
+            <ul>
+                <li><a href="faciaisportaria1">FACIAIS PORTARIA 1</a></li>
+                <li><a href="faciaisportaria2">FACIAIS PORTARIA 2</a></li>
+                <li><a href="camerasportaria1">CAMERAS PORTARIA 1</a></li>
+                <li><a href="camerasportaria2">CAMERAS PORTARIA 2</a></li>
+            </ul>
+        </nav>
+    </header>
     <table>
         <thead>
             <tr>
-                <th>Canal</th>
-                <th>Nome</th>
-                <th>IP Local</th>
-                <th>IP Externo</th>
-                <th>Ação</th>
+                <th>
+                    <p>A DR. Silva Engenharia tem mais de 10 anos de experiência no setor elétrico, oferecendo serviços
+                        de
+                        qualidade em instalações elétricas para residências e prédios.</p>
+                    <p> Com um histórico sólido de projetos
+                        bm-sucedidos, a empresa agora enfrenta novos desafios ao expandir sua atuação.</p>
+                    <p> A nova equipe,
+                        especializada em CFTV (Circuito Fechado de Televisão) e redes de computadores, está preparada
+                        para
+                        atender às necessidades tecnológicas de clientes que buscam soluções modernas em segurança e
+                        infraestrutura de rede.</p>
+                </th>
+
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>0</td>
-                <td>DVR PORTARIA 1</td>
-                <td>172.16.3.200</td>
-                <td class="external-ip">Ip Externo</td>
-                <td><a href="http://45.170.99.143:8093" target="_blank">
-                        <div class="camera-icon"></div>
-                    </a></td>
-            </tr>
-            <!-- Continue com as outras câmeras -->
-            <tr>
-                <td>1</td>
-                <td>DOCUMENTO</td>
-                <td>172.16.3.242</td>
-                <td class="external-ip">Ip Externo</td>
-                <td><a href="http://45.170.99.143:8042" target="_blank">
-                        <div class="camera-icon"></div>
-                    </a></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>TRIAGEM CAMINHÃO</td>
-                <td>172.16.3.232</td>
-                <td class="external-ip">Ip Externo</td>
-                <td><a href="http://45.170.99.143:8032" target="_blank">
-                        <div class="camera-icon"></div>
-                    </a></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>TRIAGEM CARRO</td>
-                <td>172.16.3.240</td>
-                <td class="external-ip">Ip Externo</td>
-                <td><a href="http://45.170.99.143:8040" target="_blank">
-                        <div class="camera-icon"></div>
-                    </a></td>
-            </tr>
-        </tbody>
+
     </table>
+
+    <div id="whatsapp-button">
+        <a href="https://wa.me/SEUNUMERO" target="_blank">📱</a>
+    </div>
 
     <!-- Inclua o script aqui, no final do body -->
     <script src="js/script.js"></script>
